--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 
 <head>
     <title>Word Guess Game</title>
-    <script src="assets/javascript/game.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
         crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body>
+<body onload="randTeam()">
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1 class="display-4">2017-2018 English Premier League</h1>
@@ -55,96 +54,7 @@
             </div>
         </div>
     </div>
-
-    <script>
-        var correct = 0;
-        var key = ["arsenal", "chelsea", "liverpool", "mancity", "manunited", "tottenham", "burnley", "everton", "leicestercity", "newcastle", "crystalpalace", "bournemouth", "watford", "brighton", "westham", "southampton", "huddersfield", "swanseacity", "westbrom", "stokecity"];
-        var guess = [];
-        var chances = 6;
-        var wrong = 0;
-        var wrongGuess = [];
-        var inGame = false;
-        var answer = [];
-        var wins = 0;
-        function randTeam() {
-            guess = [];
-            wrongGuess = [];
-            answer = key[Math.floor((Math.random()) * key.length)].toUpperCase();
-            for (var i = 0; i < answer.length; i++) {
-                if (answer[i] === " ") {
-                    guess.push(" ");
-                }
-                else {
-                    guess.push("_ ");
-                }
-            }
-            inGame = true;
-            document.getElementById("guess").innerHTML = guess.join("");
-            document.getElementById("lose").innerHTML = "";
-            document.getElementById("answerShow").innerHTML = "";
-            document.getElementById("win").innerHTML = "";
-            document.getElementById("wrongGuess").innerHTML = wrongGuess;
-            document.getElementById("totalWins").innerHTML = wins;
-            chances = 6;
-            correct = 0;
-            console.log(answer);
-        }
-        randTeam();
-        document.getElementById("chances").innerHTML = chances;
-        document.onkeyup = function (event) {
-            var userInput = event.key.toUpperCase();
-            if (inGame) {
-                var right = 0;
-                var dupe = 0;
-                for (j = 0; j < guess.length; j++) {
-                    if (userInput === answer[j] && userInput != guess[j]) {
-                        guess[j] = userInput;
-                        right++;
-                        correct++;
-                    }
-                    else if (userInput === guess[j]) {
-                        right++;
-                    }
-                }
-                console.log(userInput);
-                console.log(guess.length);
-                console.log(right);
-                document.getElementById("guess").innerHTML = guess.join("");
-                for (k = 0; k < wrongGuess.length; k++) {
-                    if (userInput === wrongGuess[k]) {
-                        dupe++;
-                    }
-                }
-                if (right === 0 && dupe === 0) {
-                    wrongGuess.push(userInput);
-                    chances--;
-                }
-                document.getElementById("wrongGuess").innerHTML = wrongGuess;
-                document.getElementById("chances").innerHTML = chances;
-                if (chances < 1) {
-                    document.getElementById("lose").innerHTML = "You Lose. Press a key and try again."
-                    document.getElementById("answerShow").innerHTML = answer;
-                    inGame = false;
-                }
-                if (correct === answer.length) {
-                    document.getElementById("win").innerHTML = "You Win! Press a key and try again."
-                    wins++;
-                    inGame = false;
-                }
-            }
-            else {
-                randTeam();
-            }
-            console.log(guess);
-            console.log(wrongGuess);
-            console.log(correct);
-            console.log(chances);
-        }
-    </script>
-
-
-
-
-
-
+    <script src="assets/javascript/game.js"></script>
+</body>
+    
 </html>
